--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,16 +9,16 @@ license = "MIT"
 repository = "https://github.com/shelbyd/bevy_rbrb"
 
 [dependencies]
-bevy = "0.5.0"
 bevy_app = "0.5.0"
 bevy_ecs = "0.5.0"
 bevy_reflect = "0.5.0"
 bincode = "1.3.3"
 bson = "2.0.1"
 log = "0.4.14"
-rbrb = { version = "0.1.0", path = "../rbrb" }
+rbrb = { version = "0.1.0", git = "https://github.com/shelbyd/rbrb" }
 serde = { version = "1.0.130", features = ["derive"] }
 
 [dev-dependencies]
+bevy = "0.5.0"
 bincode = "1.3.3"
 structopt = "0.3.25"
