--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,8 +14,9 @@ bevy_ecs = "0.5.0"
 bevy_reflect = "0.5.0"
 bincode = "1.3.3"
 bson = "2.0.1"
+derive_more = "0.99.17"
 log = "0.4.14"
-rbrb = { version = "0.1.0", git = "https://github.com/shelbyd/rbrb" }
+rbrb = { version = "0.1.0", path = "../rbrb" }
 serde = { version = "1.0.130", features = ["derive"] }
 
 [dev-dependencies]
